--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "jest": "24.3.1",
     "react-test-renderer": "16.8.4",
     "ts-jest": "24.0.0",
+    "tslib": "^2.4.0",
     "typescript": "^3.3.3333",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.2.3",
